--- a/app/package.json
+++ b/app/package.json
@@ -67,6 +67,7 @@
     "rc-datetime-picker": "^1.6.1",
     "react": "^17.0.1",
     "react-color": "^2.19.3",
+    "react-csv-reader": "^3.1.2",
     "react-custom-scroll": "^4.2.1",
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
