--- a/app/package.json
+++ b/app/package.json
@@ -72,6 +72,7 @@
     "react-day-picker": "^7.4.8",
     "react-dom": "^17.0.1",
     "react-hot-loader": "^4.13.0",
+    "react-loader-spinner": "^3.1.14",
     "react-moment": "^1.0.0",
     "react-motion": "^0.5.2",
     "react-redux": "^7.2.2",
